--- a/css/theme.css
+++ b/css/theme.css
@@ -523,8 +523,6 @@ img {
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
     transition: all 1s ease;
-	
-
 }
 
 .dark-overlay{
@@ -543,6 +541,25 @@ img {
     transition: all 1s ease;
 }
 
+.tile-border{
+	position:absolute;
+	top:0;
+	bottom:0;
+	width:100%;
+	height: 100%;
+	border:7px solid rgba(0, 0, 0, 0.2);
+
+}
+
+.mobile-only{
+	display: none;
+}
+
+
+/* Smartphone Portrait and Landscape */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px){ .mobile-only { display: block;}}
 
 section:after {
 	float:none;
